ARROW-8209: [Python] Improve error message when trying to access duplicate Table column

Also adds small binding for `Schema::GetAllFieldIndices`

Closes #6831 from wesm/ARROW-8209

Authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: Wes McKinney <wesm+git@apache.org>